# Quick_HeadsUp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md
.claude/: claude-p2p-plan.md  claude-plan.md  color-schemes-plan.md  custom-word-list-plan.md  multi-viewer-plan.md  self-contained-layout-plan.md  spawn-terminal-plan.md  tui-menu-plan.md  v1.1-remaining-plan.md
.claude/skills/make-release/: SKILL.md
crates/client/: Cargo.toml  build.rs
crates/client/src/: config.rs  converter.rs  converter_menu.rs  converter_tests.rs  game.rs  input.rs  list_menu.rs  lobby.rs  main.rs  menu.rs  net.rs  paths.rs  render.rs  terminal_spawn.rs  theme.rs  timer.rs  types.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/relay/: Cargo.toml
crates/relay/src/: main.rs  room_codes.rs
files/: ASOIAF_list.txt
lists/: ASOIAF_list.txt
src/: .main.rs.swp  file.txt  game.rs  input.rs  main.rs  render.rs  timer.rs  types.rs
