[package]
name = "guess_up"
version = "0.2.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
crossterm = { version = "0.27", features = ["event-stream"] }
rand = "0.8"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
